<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.view.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/cv_bottom_sheet">

        <FrameLayout
            android:id="@+id/fl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/teal_200" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/cv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="8dp"
            app:layout_constraintBottom_toTopOf="@id/hsv_top_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/hsv_top_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_top">

            <LinearLayout
                android:id="@+id/ll_top_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btn_food"
                    style="@style/MainActivityButton.Selector.Start"
                    android:text="@string/MainActivity_food" />

                <TextView
                    android:id="@+id/btn_cafe"
                    style="@style/MainActivityButton.Selector"
                    android:text="@string/MainActivity_cafe" />

                <TextView
                    android:id="@+id/btn_convenience"
                    style="@style/MainActivityButton.Selector"
                    android:text="@string/MainActivity_convenience" />

                <TextView
                    android:id="@+id/btn_flower"
                    style="@style/MainActivityButton.Selector"
                    android:text="@string/MainActivity_flower" />

                <TextView
                    android:id="@+id/btn_favorite"
                    style="@style/MainActivityButton.End"
                    android:text="@string/MainActivity_favorite" />
            </LinearLayout>
        </HorizontalScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/ContentDescription_fab_tracking"
            android:src="@drawable/baseline_gps_fixed_24"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hsv_top_btn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ContentDescription_list_mode"
            android:src="@drawable/baseline_map_24"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/fab_tracking"
            app:layout_constraintTop_toBottomOf="@id/fab_tracking" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/cv_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="8dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
